Adding auth components
